feat(scheduling): 优化排课逻辑和教师课程偏好处理
- 新增任务ID生成逻辑，用于跟踪排课过程
- 重构遗传算法排课逻辑，提高可读性和可维护性
-优化教师课程偏好获取方法，支持缓存和排序
-调整教室和课程匹配逻辑，提高排课效率
- 移除冗余服务引用，简化SchedulingLogic类